Fixes flyouts from flying off screen

--- a/styleguide/source/assets/scss/03-organisms/_category-navigation-menu.scss
+++ b/styleguide/source/assets/scss/03-organisms/_category-navigation-menu.scss
@@ -129,7 +129,6 @@
       margin-left: 250px !important;
       width: 550px !important;
       max-width: none !important;
-      overflow: auto;
     }
 
     @include breakpoint($bp-large) {
