--- a/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
+++ b/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
@@ -43,7 +43,6 @@
         .ama_category_navigation_menu__flyout {
           top: 0 !important;
           margin-top: 0 !important;
-          overflow-y: auto;
         }
       }
 
